# pydu

./: .appveyor.yml  .coveragerc  .gitignore  .travis.yml  CHANGELOG.md  CHANGELOG.rst  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  makefile  pyproject.toml  requirements-dev.txt  setup.py  tox.ini  utils.py
docs/: Makefile  README.md  _coverpage.md  _sidebar.md  archive.md  archive.rst  cmd.md  cmd.rst  compat.md  compat.rst  conf.py  console.md  console.rst  convert.md  convert.rst  dict.md  dict.rst  dt.md  dt.rst  environ.md  environ.rst  exception.md  exception.rst  file.rst  functional.md  functional.rst  index.html  index.rst  inspect.md  inspect.rst  iter.md  iter.rst  itercompat.rst  list.md  list.rst  make.bat  misc.md  misc.rst  network.md  network.rst  (+16 more)
pydu/: __init__.py  archive.py  cmd.py  cmd.pyi  compat.py  console.py  convert.py  convert.pyi  dict.py  dict.pyi  dt.py  environ.py  exception.py  file.py  functional.py  inspect.py  iter.py  iter.pyi  itercompat.py  list.py  misc.py  network.py  path.py  platform.py  process.py  request.py  set.py  slot.py  string.py  structures.py  system.py  unit.py  utils.py
pylib/: structures.py  utils.py
stubs/: dict.pyi  environ.pyi  exception.pyi  list.pyi  misc.pyi  network.pyi  process.pyi
tests/: test_archive.py  test_cmd.py  test_compat.py  test_compatibility.py  test_console.py  test_convert.py  test_dict.py  test_dt.py  test_environ.py  test_exception.py  test_file.py  test_functional.py  test_inspect.py  test_iter.py  test_itercompat.py  test_list.py  test_misc.py  test_network.py  testing.py  (+10 more)
(+61 files in other folders)
